# SpbuHomework

./: .gitignore  README.md
.github/workflows/: CI.yml  buildntest.yml
GitHubActions/: GitHubActions.sh
Homework1/: flipper.c  incompleteQuotient.c  luckyTickets.c  parenthesisCheck.c  primeNumbers.c  substring.c  swap.c  zeroCounter.c
Homework10/GraphViz/: CMakeLists.txt  README.md  README.txt  dotter.sh  graph.c  graph.dot  matrix.txt
Homework10/KMP/: CMakeLists.txt  README.md  main.c  substring.c  substring.h  substringTest.c  substringTest.h  test.txt
Homework11/Comments/: CMakeLists.txt  comments.c  comments.h  commentsTest.c  commentsTest.h  firstTest.txt  main.c  matrix.txt  secondTest.txt  thirdTest.txt
Homework11/RealNumber/: CMakeLists.txt  lexer.c  lexer.h  lexerTest.c  lexerTest.h  main.c
Homework2/: lineAndLogPow.c
Homework2/bubbleCountSort/: CMakeLists.txt  bubbleCountSorts.c
Homework2/lineAndLogPow/: CMakeLists.txt  lineAndLogPow.c
Homework2/recursiveAndIterFibonacci/: CMakeLists.txt  recursiveAndIterFibonacci.c
Homework2/semiQsort/: CMakeLists.txt  semiQsort.c
Homework3/: CMakeLists.txt  mostFrequentElement.c  search.c  smartQsort.c
Homework4/: binaryRepresentation.c
Homework5/: CMakeLists.txt  stack.c  stack.h
Homework6/mergeSort/: CMakeLists.txt  list.c  list.h  listTest.c  listTest.h  main.c  mergeSort.c  mergeSort.h  mergeSortTest.c  mergeSortTest.h  test.txt
Homework8/: AVLTree.c  AVLTree.h  CMakeLists.txt  main.c  treeTest.c  treeTest.h
consoleBuild/: CMakeLists.sh  consoleBuild.sh  directions.txt
(+98 files in other folders)
